Update - added $c_error
the standard error color

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
 $c_whatever: #BADA55;
 
 $c_color1: $whatever;
+
 $c_color2: #F00;
 
-$c_error: $c_color2;
+$c_error: #FF9494;
 </code>
 </pre> 
 
