solved rwd issue
width of SH container was wrongly inherited

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <head>
-<!-- MERGE GOOGLE FONTS WHATEVR INTO 1 CALLING -->
-<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Cantora+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Cantora+One|Raleway' rel='stylesheet' type='text/css'>
 <meta charset="UTF-8">
-<title>cowoSASS - a Sass Library by cowowo</title>
+<title>cowo-Sass - a Sass Library by cowowo</title>
 <meta name="description" content="cowoSASS is a Sass library built by cowowo."> 
 <meta name="keywords" content="sass library cowowo, scss library"> 		
 <!-- <link rel="shortcut icon" href="assets/favicon/favicon.ico"> -->
-<link rel="stylesheet" type="text/css" href="css/global.css" >
+<link rel="stylesheet" type="text/css" href="assets/css/global.css" > 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
-
-
+<!-- SyntaxHighlighter -->
 <link rel="stylesheet" href="js/plugins/SyntaxHighlighter/shCore.css" />
 <link rel="stylesheet" href="js/plugins/SyntaxHighlighter/shCoreDefault.css" />
-  
-  
-  
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
+<style type="text/css">
+  .syntaxhighlighter { 
+     overflow-y: hidden !important; 
+     /* overflow-x: auto !important;  */
+  	}
+</style>
+
+
+
 </head>
 <body>
 <div id="container">
@@ -28,7 +31,7 @@
     		
             <header>
                 <div id="headerContent" class="clearfix">
-                    <div id="weblogo"><h1>cowoSASS</h1></div>  
+                    <div id="weblogo"><h1>cowo-Sass</h1></div>  
                     <div id="slogan"><h2>a simple Sass Library by <a href="https://twitter.com/carlwebdev" target="_blank">@carlwebdev</a></h2></div>  
                 </div>
             </header>
