--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <header>
                 <div id="headerContent" class="clearfix">
                     <div id="weblogo"><h1>cowo-Sass</h1></div>  
-                    <div id="slogan"><h2>a simple Sass Library by <a href="https://twitter.com/carlwebdev" target="_blank">@carlwebdev</a></h2></div>  
+                    <div id="slogan"><h2>a simple Sass library by <a href="https://twitter.com/carlwebdev" target="_blank">@carlwebdev</a></h2></div>  
                 </div>
             </header>
                   
