--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <head>
 <link href='http://fonts.googleapis.com/css?family=Cantora+One|Raleway' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
 <meta charset="UTF-8">
-<title>cowo-Sass - a Sass Library by cowowo</title>
-<meta name="description" content="cowoSASS is a Sass library built by cowowo."> 
-<meta name="keywords" content="sass library cowowo, scss library"> 		
-<!-- <link rel="shortcut icon" href="assets/favicon/favicon.ico"> -->
+<title>cowo-Sass - a Sass library by @carlwebdev</title>
+<meta name="description" content="cowo-Sass is a Sass library built by @carlwebdev."> 
+<meta name="keywords" content="sass library cowowo, scss library, sass mixin library"> 		
+<link rel="shortcut icon" href="assets/favicon/favicon.ico">
 <link rel="stylesheet" type="text/css" href="assets/css/global.css" > 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
+<!--<link rel="author" href="http://carljohansson.net/"/> -->
 
 <!-- SyntaxHighlighter -->
 <link rel="stylesheet" href="js/plugins/SyntaxHighlighter/shCore.css" />
 <link rel="stylesheet" href="js/plugins/SyntaxHighlighter/shCoreDefault.css" />
-<style type="text/css">
-  .syntaxhighlighter { 
-     overflow-y: hidden !important; 
-     /* overflow-x: auto !important;  */
-  	}
-</style>
-
-
+<link rel="stylesheet" href="js/plugins/SyntaxHighlighter/overflow-y-hack.css" />
 
 </head>
 <body>
 <div id="container">
+
+<a href="https://github.com/carlwebdev/cowo-Sass" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
+
+
 
           
     <div class="container_section_1">
