--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<div id="container">
+<div id="page">
 
 <a href="https://github.com/carlwebdev/cowo-Sass" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 
@@ -500,7 +500,7 @@ COULD PROBABLY JUST USE COMPASS FOR THIS! - and for other things too
     </footer>
 
 
-</div> <!-- /container -->
+</div> <!-- /page -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <!-- SyntaxHighlighter -->
 <script src="js/plugins/SyntaxHighlighter/shCore.js"></script>
