--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="cowo-Sass is a Sass library built by @carlwebdev."> 
 <meta name="keywords" content="sass library cowowo, scss library, sass mixin library"> 		
 <link rel="shortcut icon" href="assets/favicon/favicon.ico">
-<link rel="stylesheet" type="text/css" href="assets/css/global.css" > 
+<link rel="stylesheet" href="assets/css/global.css" > 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 <!--<link rel="author" href="http://carljohansson.net/"/> -->
 
