--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
 <meta charset="UTF-8">
-<title>cowo-Sass - a Sass library by @carlwebdev ...</title>
+<title>cowo-Sass - a Sass library by @carlwebdev</title>
 <meta name="description" content="cowo-Sass is a Sass library built by @carlwebdev."> 
 <meta name="keywords" content="sass library cowowo, scss library, sass mixin library"> 		
 <link rel="shortcut icon" href="assets/favicon/favicon.ico">
