--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  	 <div class="frame">
       <div class="inner">
       
-        <div id="main_logo"><h1>cowoSass</h1></div>  
+        <div id="main_logo"><h1>cowoSass!</h1></div>  
         <div id="slogan"><h2><span>a simple Sass library</span> <span>by <a href="https://twitter.com/carlwebdev" target="_blank">@carlwebdev</a></span></h2></div>  
         
       </div> <!-- /inner -->
