--- a/index.html
+++ b/index.html
@@ -19,6 +19,74 @@
 <body>
 <div id="page">
 
+<!-- 
+  TODO:
+  - RENAME TO - mySass, myReset, etc
+  - sass mixing - golden ratio - big, vs small
+  - img {@include img;}  TEST - SHOULD BE BASE RESET...
+  - COWOSASS - mixin link underline
+  - cowoSass - in 1 field
+-->
+
+
+
+<!-- 
+  STUFF:
+  - cowoSass as MIXIN  ETC framework, usease as file, no solo con visible reference, sino comm file descargable,AKA DOWNLOAD BUTTON
+    - DOC - BUILD MY OWN SASS MIXIN LIBRARY FRAMEWORK - info inside
+      - DOC - BUILD MY OWN SASS MIXIN LIBRARY FRAMEWORK - para usar brackets sass ya mismo, - y luego ya compass en brackets o bourbon donde sea, o ambos
+-->
+
+
+
+
+
+<!-- 
+2018 DOC my sass
+
+REUSABLE MIXINS
+mixin underline, find it, i liked how it worked
+
+
+TRICK TO UNDO ELIPSIS OR STH, DE PATI inside
+elipsis_reset
+p {white-space:inherit;}
+
+
+DOC - CREATE MIXIN for rem fontsize and px fallback solution
+
+/* 
+ * FALLBACKS using Sass
+ */
+ 
+
+/* CREATE MIXIN for rem fontsize and px fallback solution */
+
+/* FALLBACK for background opacity */
+/*
+#asfgasafasf {
+		background: #ccc; // Fall-back for brosers that don't support opacity
+		background: rgba(204, 204, 204, 0.85);
+	}*/
+
+// create mixin - CSS_FALLBACK_tricks - LINK - the RGB fallback color only works when using shorthand. 
+// http://css-tricks.com/ie-background-rgb-bug/
+
+
+//// SASS FUNCTINS FILE PARTIAL FILE
+/* CSS Document - SASS */
+/* Front-End */
+/* FUNCTIONS */ // for the sass grid thingee	
+// - would be as sepoarate file anyways - DO THIS FOR THE BOLEPLATE !!!!!!!!!!!!!!!!!!!!
+
+-->
+
+
+
+
+
+
+
 <a href="https://github.com/carlwebdev/cowo-Sass" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 
 
